# New-Trade-Offer-with-Database

./: .replit  README.md  algorithms.py  app.py  database.py  explanation.py  investment_calculator.py  main.py  models.py  orders.py  pyproject.toml  utils.py
